--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 								<div class="input-group-prepend">
 									<span class="input-group-text"><i class="fa fa-key"></i></span>
 								</div>
-								<input type="text" name="password" id="password" class="form-control input-sm"
+								<input type="password" name="password" id="password" class="form-control input-sm"
 									placeholder="Mật khẩu">
 							</div>
 							<span class="sp-thongbao" id="tbMatKhau"></span>
